--- a/JsonToYaml/JsonToYaml.vcxproj
+++ b/JsonToYaml/JsonToYaml.vcxproj
@@ -136,6 +136,9 @@
     <ClInclude Include="Parser.h" />
     <ClInclude Include="Tokenizer.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="test.json" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
