--- a/JsonToYaml/JsonToYaml.vcxproj.filters
+++ b/JsonToYaml/JsonToYaml.vcxproj.filters
@@ -33,4 +33,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="test.json" />
+  </ItemGroup>
 </Project>
